--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,3 +3,7 @@
 html {
   font-size: 10px;
 }
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
